# tabularium

./: .gitignore  CLAUDE.md  README.md  go.mod  go.sum  setup.cfg
.claude-flow/metrics/: performance.json  task-metrics.json
.claude/agents/: tabularium-model-writer.md
.github/workflows/: auto-tag.yml  claude-code.yml  go.yml  schema.yml  sync-capmodel.yml
.swarm/: memory.db
client/: api.yaml
client/python/: setup.cfg
client/tabularium-py/: models.py
cmd/capmodelgen/: generate.go  main.go  parse.go  type.go.tmpl
cmd/codegen/: main.go
cmd/externalgen/: main.go
cmd/schemagen/: main.go
cmd/slimgen/: main.go
docs/: organization-name-asset-type.md  people-asset-type.md
internal/capmodel/: adobject.go  asset.go  asset_model.go  awsresource.go  capmodel_test.go  convert_gen.go  domain.go  file.go  gcpresource_model.go  organization.go  port.go  preseed.go  technology.go  technology_model.go  webapplication.go  webapplication_model.go  webpage_model.go
internal/capmodelgen/: convert.go.tmpl  extract.go.tmpl  generate.go  main.go  model.go.tmpl  parse.go  typemap.go.tmpl
pkg/alias/: aliaser.go  label_alias.go  model_aliaser.go
pkg/capmodel/: adobject.go  adobject_model.go  asset.go  awsresource.go  awsresource_model.go  azureresource.go  azureresource_model.go  capmodel_test.go  cidr.go  cloudresource.go  convert.go  convert_gen.go  convert_test.go  domain.go  domain_model.go  extract_gen.go  file.go  file_model.go  gcpresource.go  gen_adobject.go  gen_attribute.go  gen_awsresource.go  gen_azureresource.go  gen_cloudresource.go  gen_file.go  ip.go  (+26 more)
(+254 files in other folders)
