[metadata]
name = tabularium
version = 0.0.1
author = Praetorian
author_email = support@praetorian.com
description = Chariot data model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/praetorian-inc/tabularium
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    click >= 2.11

[options.entry_points]
console_scripts =
    praetorian = praetorian_cli.main:main
